# quant-portfolio

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
01_fixed_income/bond_analytics/: README.md  bond_analytics.py
01_fixed_income/fixed_income/: README.md  fixed_income.py
01_fixed_income/fra_futures/: README.md  fra_futures.py
01_fixed_income/key_rate_durations/: README.md  key_rate_durations.py
01_fixed_income/multicurve_ois/: README.md  multicurve_ois.py
01_fixed_income/yield_curve/: README.md  yield_curve_bootstrapper.py
02_derivatives/binomial_tree/: README.md  binomial_tree.py
02_derivatives/black_scholes/: README.md  black_scholes.py
02_derivatives/cms_swaps/: README.md  cms_swaps.py
02_derivatives/heston_model/: README.md  heston_model.py  heston_model_core  heston_pricer
02_derivatives/interest_rate_models/: README.md  interest_rate_models.py
02_derivatives/local_vol/: README.md  dupire_local_vol.py
02_derivatives/monte_carlo/: README.md  monte_carlo_pricer.py
02_derivatives/sabr_model/: README.md  sabr_model.py
02_derivatives/tree_pricers/: README.md  tree_pricers.py
03_credit_risk/copula_models/: README.md  copula_models.py
03_credit_risk/credit_risk/: README.md  credit_risk.py
03_credit_risk/cva_xva/: README.md  cva_xva.py
03_credit_risk/evt_tail_risk/: README.md  evt_tail_risk.py
03_credit_risk/merton_model/: README.md  merton_model.py
03_credit_risk/stress_testing/: README.md  stress_testing.py
04_risk_models/bootstrap_ci/: README.md  bootstrap_ci.py
04_risk_models/dcc_garch/: README.md  dcc_garch.py
04_risk_models/garch/: README.md  garch.py
04_risk_models/liquidity_risk/: README.md  liquidity_risk.py
04_risk_models/time_series_diagnostics/: README.md  time_series_diagnostics.py
04_risk_models/var_calculator/: README.md  var_calculator.py
05_portfolio/kelly_criterion/: README.md  kelly_criterion.py
05_portfolio/mean_variance/: README.md  portfolio_optimisation.py
05_portfolio/mean_variance_full/: README.md  mean_variance_optimization.py
05_portfolio/tc_aware_mvo/: README.md  tc_aware_mvo.py
06_alpha_research/fama_french/: README.md  fama_french.py
06_alpha_research/gradient_boosting/: README.md  xgboost_alpha.py
06_alpha_research/ml_return_prediction/: README.md  ml_return_prediction.py
06_alpha_research/neural_networks/: README.md  neural_net_returns.py
06_alpha_research/nlp_sentiment/: README.md  nlp_sentiment.py
06_alpha_research/pairs_trading/: README.md  pairs_trading.py
06_alpha_research/pca_factors/: README.md  pca_factor_analysis.py
06_alpha_research/regime_detection/: README.md  regime_detection.py
06_alpha_research/robust_stats/: README.md  robust_stats.py
07_infrastructure/alpha_pipeline/: README.md  alpha_pipeline.py
07_infrastructure/backtesting/: README.md  backtest_engine.py
07_infrastructure/optimal_execution/: README.md  optimal_execution.py
07_infrastructure/options_risk/: README.md  options_risk_engine.py
07_infrastructure/pnl_attribution/: README.md  pnl_attribution.py
07_infrastructure/rl_trading/: README.md  rl_trading.py
cpp_engine/: CMakeLists.txt  README.MD
cpp_engine/benchmark/: benchmark_orderbook.py
cpp_engine/include/: order_book.hpp
cpp_engine/src/: bindings.cpp  order_book.cpp
cpp_engine/tests/: test_order_book.cpp
tests/: conftest.py  test_credit_risk.py  test_derivatives.py  test_fixed_income.py  test_portfolio.py  test_risk_models.py
