[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-portfolio"
version = "1.0.0"
description = "Production-grade quantitative finance library — derivatives, risk, portfolio optimisation, and ML"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vedant Upasani"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "arch>=6.0",          # GARCH models
    "statsmodels>=0.14",  # time-series diagnostics
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
full = [
    "QuantLib-Python>=1.31",
    "torch>=2.0",
    "transformers>=4.30",
    "hmmlearn>=0.3",
    "gymnasium>=0.29",
    "stable-baselines3>=2.0",
    "seaborn>=0.13",
]

[project.urls]
Homepage = "https://github.com/VedantUpasani/quant-portfolio"
Issues   = "https://github.com/VedantUpasani/quant-portfolio/issues"

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-ra -q --strict-markers"
markers   = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external data",
]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length    = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N803",   # argument name should be lowercase (quant uses X, S, T, etc.)
    "N806",   # variable in function should be lowercase
]

[tool.ruff.lint.isort]
known-first-party = ["quant_portfolio"]

# ── Setuptools package discovery ─────────────────────────────────────────────
[tool.setuptools.packages.find]
include = ["quant_portfolio*", "fixed_income*", "derivatives*", "risk*", "statistics*", "portfolio*", "ml*", "execution*"]
exclude = ["tests*", "docs*", "examples*"]
